Segundo Trabalho/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> Corpo
Rule 2     Programa -> Glob
Rule 3     Programa -> Glob Corpo
Rule 4     Glob -> Decl
Rule 5     Glob -> Glob Decl
Rule 6     Decl -> INT NOME
Rule 7     Decl -> INT NOME ATR NUMERO
Rule 8     Decl -> INT NOME ATR NOME
Rule 9     Decl -> Fundecl DEFINE NOME Programa RETURN NOME )
Rule 10    Decl -> Fundecl DEFINE NOME Programa RETURN NUMERO )
Rule 11    Decl -> Fundecl DEFINE NOME RETURN NUMERO )
Rule 12    Fundecl -> NOME ( ) (
Rule 13    Corpo -> Ope
Rule 14    Corpo -> Corpo Ope
Rule 15    Ope -> Atrib
Rule 16    Ope -> Escrever
Rule 17    Ope -> Se
Rule 18    Ope -> Enquanto
Rule 19    Ope -> PRINT ( Frase )
Rule 20    Frase -> NOME
Rule 21    Frase -> Frase NOME
Rule 22    Se -> SE Cond ENTAO Corpo FIM
Rule 23    Se -> SE Cond ENTAO Corpo SENAO Corpo FIM
Rule 24    Enquanto -> ENQUANTO Cond FAZ Corpo FIM
Rule 25    Atrib -> NOME ATR Expr
Rule 26    Atrib -> NOME ATR LER
Rule 27    Escrever -> ESCREVER Expr
Rule 28    Expr -> ( Expr )
Rule 29    Expr -> NOME ( )
Rule 30    Expr -> Var
Rule 31    Expr -> NUMERO
Rule 32    Expr -> + ( Expr VIRG Expr )
Rule 33    Expr -> - ( Expr VIRG Expr )
Rule 34    Expr -> * ( Expr VIRG Expr )
Rule 35    Expr -> / ( Expr VIRG Expr )
Rule 36    Expr -> % ( Expr VIRG Expr )
Rule 37    Expr -> Cond
Rule 38    Cond -> ( Cond )
Rule 39    Cond -> MAIOR ( Expr VIRG Expr )
Rule 40    Cond -> MENOR ( Expr VIRG Expr )
Rule 41    Cond -> MAIORI ( Expr VIRG Expr )
Rule 42    Cond -> MENORI ( Expr VIRG Expr )
Rule 43    Cond -> IGUAL ( Expr VIRG Expr )
Rule 44    Cond -> NIGUAL ( Expr VIRG Expr )
Rule 45    Cond -> E ( Cond VIRG Cond )
Rule 46    Cond -> OU ( Cond VIRG Cond )
Rule 47    Cond -> NEG ( Cond )
Rule 48    Var -> NOME

Terminals, with rules where they appear

%                    : 36
(                    : 12 12 19 28 29 32 33 34 35 36 38 39 40 41 42 43 44 45 46 47
)                    : 9 10 11 12 19 28 29 32 33 34 35 36 38 39 40 41 42 43 44 45 46 47
*                    : 34
+                    : 32
-                    : 33
/                    : 35
ATR                  : 7 8 25 26
DEFINE               : 9 10 11
E                    : 45
ENQUANTO             : 24
ENTAO                : 22 23
ESCREVER             : 27
FAZ                  : 24
FIM                  : 22 23 24
IGUAL                : 43
INT                  : 6 7 8
LER                  : 26
MAIOR                : 39
MAIORI               : 41
MENOR                : 40
MENORI               : 42
NEG                  : 47
NIGUAL               : 44
NOME                 : 6 7 8 8 9 9 10 11 12 20 21 25 26 29 48
NUMERO               : 7 10 11 31
OU                   : 46
PRINT                : 19
RETURN               : 9 10 11
SE                   : 22 23
SENAO                : 23
VIRG                 : 32 33 34 35 36 39 40 41 42 43 44 45 46
error                : 

Nonterminals, with rules where they appear

Atrib                : 15
Cond                 : 22 23 24 37 38 45 45 46 46 47
Corpo                : 1 3 14 22 23 23 24
Decl                 : 4 5
Enquanto             : 18
Escrever             : 16
Expr                 : 25 27 28 32 32 33 33 34 34 35 35 36 36 39 39 40 40 41 41 42 42 43 43 44 44
Frase                : 19 21
Fundecl              : 9 10 11
Glob                 : 2 3 5
Ope                  : 13 14
Programa             : 9 10 0
Se                   : 17
Var                  : 30

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . Corpo
    (2) Programa -> . Glob
    (3) Programa -> . Glob Corpo
    (13) Corpo -> . Ope
    (14) Corpo -> . Corpo Ope
    (4) Glob -> . Decl
    (5) Glob -> . Glob Decl
    (15) Ope -> . Atrib
    (16) Ope -> . Escrever
    (17) Ope -> . Se
    (18) Ope -> . Enquanto
    (19) Ope -> . PRINT ( Frase )
    (6) Decl -> . INT NOME
    (7) Decl -> . INT NOME ATR NUMERO
    (8) Decl -> . INT NOME ATR NOME
    (9) Decl -> . Fundecl DEFINE NOME Programa RETURN NOME )
    (10) Decl -> . Fundecl DEFINE NOME Programa RETURN NUMERO )
    (11) Decl -> . Fundecl DEFINE NOME RETURN NUMERO )
    (25) Atrib -> . NOME ATR Expr
    (26) Atrib -> . NOME ATR LER
    (27) Escrever -> . ESCREVER Expr
    (22) Se -> . SE Cond ENTAO Corpo FIM
    (23) Se -> . SE Cond ENTAO Corpo SENAO Corpo FIM
    (24) Enquanto -> . ENQUANTO Cond FAZ Corpo FIM
    (12) Fundecl -> . NOME ( ) (

    PRINT           shift and go to state 10
    INT             shift and go to state 11
    NOME            shift and go to state 12
    ESCREVER        shift and go to state 14
    SE              shift and go to state 15
    ENQUANTO        shift and go to state 16

    Programa                       shift and go to state 1
    Corpo                          shift and go to state 2
    Glob                           shift and go to state 3
    Ope                            shift and go to state 4
    Decl                           shift and go to state 5
    Atrib                          shift and go to state 6
    Escrever                       shift and go to state 7
    Se                             shift and go to state 8
    Enquanto                       shift and go to state 9
    Fundecl                        shift and go to state 13

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> Corpo .
    (14) Corpo -> Corpo . Ope
    (15) Ope -> . Atrib
    (16) Ope -> . Escrever
    (17) Ope -> . Se
    (18) Ope -> . Enquanto
    (19) Ope -> . PRINT ( Frase )
    (25) Atrib -> . NOME ATR Expr
    (26) Atrib -> . NOME ATR LER
    (27) Escrever -> . ESCREVER Expr
    (22) Se -> . SE Cond ENTAO Corpo FIM
    (23) Se -> . SE Cond ENTAO Corpo SENAO Corpo FIM
    (24) Enquanto -> . ENQUANTO Cond FAZ Corpo FIM

    $end            reduce using rule 1 (Programa -> Corpo .)
    RETURN          reduce using rule 1 (Programa -> Corpo .)
    PRINT           shift and go to state 10
    NOME            shift and go to state 18
    ESCREVER        shift and go to state 14
    SE              shift and go to state 15
    ENQUANTO        shift and go to state 16

    Ope                            shift and go to state 17
    Atrib                          shift and go to state 6
    Escrever                       shift and go to state 7
    Se                             shift and go to state 8
    Enquanto                       shift and go to state 9

state 3

    (2) Programa -> Glob .
    (3) Programa -> Glob . Corpo
    (5) Glob -> Glob . Decl
    (13) Corpo -> . Ope
    (14) Corpo -> . Corpo Ope
    (6) Decl -> . INT NOME
    (7) Decl -> . INT NOME ATR NUMERO
    (8) Decl -> . INT NOME ATR NOME
    (9) Decl -> . Fundecl DEFINE NOME Programa RETURN NOME )
    (10) Decl -> . Fundecl DEFINE NOME Programa RETURN NUMERO )
    (11) Decl -> . Fundecl DEFINE NOME RETURN NUMERO )
    (15) Ope -> . Atrib
    (16) Ope -> . Escrever
    (17) Ope -> . Se
    (18) Ope -> . Enquanto
    (19) Ope -> . PRINT ( Frase )
    (12) Fundecl -> . NOME ( ) (
    (25) Atrib -> . NOME ATR Expr
    (26) Atrib -> . NOME ATR LER
    (27) Escrever -> . ESCREVER Expr
    (22) Se -> . SE Cond ENTAO Corpo FIM
    (23) Se -> . SE Cond ENTAO Corpo SENAO Corpo FIM
    (24) Enquanto -> . ENQUANTO Cond FAZ Corpo FIM

    $end            reduce using rule 2 (Programa -> Glob .)
    RETURN          reduce using rule 2 (Programa -> Glob .)
    INT             shift and go to state 11
    PRINT           shift and go to state 10
    NOME            shift and go to state 21
    ESCREVER        shift and go to state 14
    SE              shift and go to state 15
    ENQUANTO        shift and go to state 16

    Corpo                          shift and go to state 19
    Decl                           shift and go to state 20
    Ope                            shift and go to state 4
    Fundecl                        shift and go to state 13
    Atrib                          shift and go to state 6
    Escrever                       shift and go to state 7
    Se                             shift and go to state 8
    Enquanto                       shift and go to state 9

state 4

    (13) Corpo -> Ope .

    PRINT           reduce using rule 13 (Corpo -> Ope .)
    NOME            reduce using rule 13 (Corpo -> Ope .)
    ESCREVER        reduce using rule 13 (Corpo -> Ope .)
    SE              reduce using rule 13 (Corpo -> Ope .)
    ENQUANTO        reduce using rule 13 (Corpo -> Ope .)
    $end            reduce using rule 13 (Corpo -> Ope .)
    RETURN          reduce using rule 13 (Corpo -> Ope .)
    FIM             reduce using rule 13 (Corpo -> Ope .)
    SENAO           reduce using rule 13 (Corpo -> Ope .)


state 5

    (4) Glob -> Decl .

    INT             reduce using rule 4 (Glob -> Decl .)
    PRINT           reduce using rule 4 (Glob -> Decl .)
    NOME            reduce using rule 4 (Glob -> Decl .)
    ESCREVER        reduce using rule 4 (Glob -> Decl .)
    SE              reduce using rule 4 (Glob -> Decl .)
    ENQUANTO        reduce using rule 4 (Glob -> Decl .)
    $end            reduce using rule 4 (Glob -> Decl .)
    RETURN          reduce using rule 4 (Glob -> Decl .)


state 6

    (15) Ope -> Atrib .

    PRINT           reduce using rule 15 (Ope -> Atrib .)
    NOME            reduce using rule 15 (Ope -> Atrib .)
    ESCREVER        reduce using rule 15 (Ope -> Atrib .)
    SE              reduce using rule 15 (Ope -> Atrib .)
    ENQUANTO        reduce using rule 15 (Ope -> Atrib .)
    $end            reduce using rule 15 (Ope -> Atrib .)
    RETURN          reduce using rule 15 (Ope -> Atrib .)
    FIM             reduce using rule 15 (Ope -> Atrib .)
    SENAO           reduce using rule 15 (Ope -> Atrib .)


state 7

    (16) Ope -> Escrever .

    PRINT           reduce using rule 16 (Ope -> Escrever .)
    NOME            reduce using rule 16 (Ope -> Escrever .)
    ESCREVER        reduce using rule 16 (Ope -> Escrever .)
    SE              reduce using rule 16 (Ope -> Escrever .)
    ENQUANTO        reduce using rule 16 (Ope -> Escrever .)
    $end            reduce using rule 16 (Ope -> Escrever .)
    RETURN          reduce using rule 16 (Ope -> Escrever .)
    FIM             reduce using rule 16 (Ope -> Escrever .)
    SENAO           reduce using rule 16 (Ope -> Escrever .)


state 8

    (17) Ope -> Se .

    PRINT           reduce using rule 17 (Ope -> Se .)
    NOME            reduce using rule 17 (Ope -> Se .)
    ESCREVER        reduce using rule 17 (Ope -> Se .)
    SE              reduce using rule 17 (Ope -> Se .)
    ENQUANTO        reduce using rule 17 (Ope -> Se .)
    $end            reduce using rule 17 (Ope -> Se .)
    RETURN          reduce using rule 17 (Ope -> Se .)
    FIM             reduce using rule 17 (Ope -> Se .)
    SENAO           reduce using rule 17 (Ope -> Se .)


state 9

    (18) Ope -> Enquanto .

    PRINT           reduce using rule 18 (Ope -> Enquanto .)
    NOME            reduce using rule 18 (Ope -> Enquanto .)
    ESCREVER        reduce using rule 18 (Ope -> Enquanto .)
    SE              reduce using rule 18 (Ope -> Enquanto .)
    ENQUANTO        reduce using rule 18 (Ope -> Enquanto .)
    $end            reduce using rule 18 (Ope -> Enquanto .)
    RETURN          reduce using rule 18 (Ope -> Enquanto .)
    FIM             reduce using rule 18 (Ope -> Enquanto .)
    SENAO           reduce using rule 18 (Ope -> Enquanto .)


state 10

    (19) Ope -> PRINT . ( Frase )

    (               shift and go to state 22


state 11

    (6) Decl -> INT . NOME
    (7) Decl -> INT . NOME ATR NUMERO
    (8) Decl -> INT . NOME ATR NOME

    NOME            shift and go to state 23


state 12

    (25) Atrib -> NOME . ATR Expr
    (26) Atrib -> NOME . ATR LER
    (12) Fundecl -> NOME . ( ) (

    ATR             shift and go to state 24
    (               shift and go to state 25


state 13

    (9) Decl -> Fundecl . DEFINE NOME Programa RETURN NOME )
    (10) Decl -> Fundecl . DEFINE NOME Programa RETURN NUMERO )
    (11) Decl -> Fundecl . DEFINE NOME RETURN NUMERO )

    DEFINE          shift and go to state 26


state 14

    (27) Escrever -> ESCREVER . Expr
    (28) Expr -> . ( Expr )
    (29) Expr -> . NOME ( )
    (30) Expr -> . Var
    (31) Expr -> . NUMERO
    (32) Expr -> . + ( Expr VIRG Expr )
    (33) Expr -> . - ( Expr VIRG Expr )
    (34) Expr -> . * ( Expr VIRG Expr )
    (35) Expr -> . / ( Expr VIRG Expr )
    (36) Expr -> . % ( Expr VIRG Expr )
    (37) Expr -> . Cond
    (48) Var -> . NOME
    (38) Cond -> . ( Cond )
    (39) Cond -> . MAIOR ( Expr VIRG Expr )
    (40) Cond -> . MENOR ( Expr VIRG Expr )
    (41) Cond -> . MAIORI ( Expr VIRG Expr )
    (42) Cond -> . MENORI ( Expr VIRG Expr )
    (43) Cond -> . IGUAL ( Expr VIRG Expr )
    (44) Cond -> . NIGUAL ( Expr VIRG Expr )
    (45) Cond -> . E ( Cond VIRG Cond )
    (46) Cond -> . OU ( Cond VIRG Cond )
    (47) Cond -> . NEG ( Cond )

    (               shift and go to state 28
    NOME            shift and go to state 29
    NUMERO          shift and go to state 31
    +               shift and go to state 32
    -               shift and go to state 33
    *               shift and go to state 34
    /               shift and go to state 35
    %               shift and go to state 36
    MAIOR           shift and go to state 38
    MENOR           shift and go to state 39
    MAIORI          shift and go to state 40
    MENORI          shift and go to state 41
    IGUAL           shift and go to state 42
    NIGUAL          shift and go to state 43
    E               shift and go to state 44
    OU              shift and go to state 45
    NEG             shift and go to state 46

    Expr                           shift and go to state 27
    Var                            shift and go to state 30
    Cond                           shift and go to state 37

state 15

    (22) Se -> SE . Cond ENTAO Corpo FIM
    (23) Se -> SE . Cond ENTAO Corpo SENAO Corpo FIM
    (38) Cond -> . ( Cond )
    (39) Cond -> . MAIOR ( Expr VIRG Expr )
    (40) Cond -> . MENOR ( Expr VIRG Expr )
    (41) Cond -> . MAIORI ( Expr VIRG Expr )
    (42) Cond -> . MENORI ( Expr VIRG Expr )
    (43) Cond -> . IGUAL ( Expr VIRG Expr )
    (44) Cond -> . NIGUAL ( Expr VIRG Expr )
    (45) Cond -> . E ( Cond VIRG Cond )
    (46) Cond -> . OU ( Cond VIRG Cond )
    (47) Cond -> . NEG ( Cond )

    (               shift and go to state 48
    MAIOR           shift and go to state 38
    MENOR           shift and go to state 39
    MAIORI          shift and go to state 40
    MENORI          shift and go to state 41
    IGUAL           shift and go to state 42
    NIGUAL          shift and go to state 43
    E               shift and go to state 44
    OU              shift and go to state 45
    NEG             shift and go to state 46

    Cond                           shift and go to state 47

state 16

    (24) Enquanto -> ENQUANTO . Cond FAZ Corpo FIM
    (38) Cond -> . ( Cond )
    (39) Cond -> . MAIOR ( Expr VIRG Expr )
    (40) Cond -> . MENOR ( Expr VIRG Expr )
    (41) Cond -> . MAIORI ( Expr VIRG Expr )
    (42) Cond -> . MENORI ( Expr VIRG Expr )
    (43) Cond -> . IGUAL ( Expr VIRG Expr )
    (44) Cond -> . NIGUAL ( Expr VIRG Expr )
    (45) Cond -> . E ( Cond VIRG Cond )
    (46) Cond -> . OU ( Cond VIRG Cond )
    (47) Cond -> . NEG ( Cond )

    (               shift and go to state 48
    MAIOR           shift and go to state 38
    MENOR           shift and go to state 39
    MAIORI          shift and go to state 40
    MENORI          shift and go to state 41
    IGUAL           shift and go to state 42
    NIGUAL          shift and go to state 43
    E               shift and go to state 44
    OU              shift and go to state 45
    NEG             shift and go to state 46

    Cond                           shift and go to state 49

state 17

    (14) Corpo -> Corpo Ope .

    PRINT           reduce using rule 14 (Corpo -> Corpo Ope .)
    NOME            reduce using rule 14 (Corpo -> Corpo Ope .)
    ESCREVER        reduce using rule 14 (Corpo -> Corpo Ope .)
    SE              reduce using rule 14 (Corpo -> Corpo Ope .)
    ENQUANTO        reduce using rule 14 (Corpo -> Corpo Ope .)
    $end            reduce using rule 14 (Corpo -> Corpo Ope .)
    RETURN          reduce using rule 14 (Corpo -> Corpo Ope .)
    FIM             reduce using rule 14 (Corpo -> Corpo Ope .)
    SENAO           reduce using rule 14 (Corpo -> Corpo Ope .)


state 18

    (25) Atrib -> NOME . ATR Expr
    (26) Atrib -> NOME . ATR LER

    ATR             shift and go to state 24


state 19

    (3) Programa -> Glob Corpo .
    (14) Corpo -> Corpo . Ope
    (15) Ope -> . Atrib
    (16) Ope -> . Escrever
    (17) Ope -> . Se
    (18) Ope -> . Enquanto
    (19) Ope -> . PRINT ( Frase )
    (25) Atrib -> . NOME ATR Expr
    (26) Atrib -> . NOME ATR LER
    (27) Escrever -> . ESCREVER Expr
    (22) Se -> . SE Cond ENTAO Corpo FIM
    (23) Se -> . SE Cond ENTAO Corpo SENAO Corpo FIM
    (24) Enquanto -> . ENQUANTO Cond FAZ Corpo FIM

    $end            reduce using rule 3 (Programa -> Glob Corpo .)
    RETURN          reduce using rule 3 (Programa -> Glob Corpo .)
    PRINT           shift and go to state 10
    NOME            shift and go to state 18
    ESCREVER        shift and go to state 14
    SE              shift and go to state 15
    ENQUANTO        shift and go to state 16

    Ope                            shift and go to state 17
    Atrib                          shift and go to state 6
    Escrever                       shift and go to state 7
    Se                             shift and go to state 8
    Enquanto                       shift and go to state 9

state 20

    (5) Glob -> Glob Decl .

    INT             reduce using rule 5 (Glob -> Glob Decl .)
    PRINT           reduce using rule 5 (Glob -> Glob Decl .)
    NOME            reduce using rule 5 (Glob -> Glob Decl .)
    ESCREVER        reduce using rule 5 (Glob -> Glob Decl .)
    SE              reduce using rule 5 (Glob -> Glob Decl .)
    ENQUANTO        reduce using rule 5 (Glob -> Glob Decl .)
    $end            reduce using rule 5 (Glob -> Glob Decl .)
    RETURN          reduce using rule 5 (Glob -> Glob Decl .)


state 21

    (12) Fundecl -> NOME . ( ) (
    (25) Atrib -> NOME . ATR Expr
    (26) Atrib -> NOME . ATR LER

    (               shift and go to state 25
    ATR             shift and go to state 24


state 22

    (19) Ope -> PRINT ( . Frase )
    (20) Frase -> . NOME
    (21) Frase -> . Frase NOME

    NOME            shift and go to state 51

    Frase                          shift and go to state 50

state 23

    (6) Decl -> INT NOME .
    (7) Decl -> INT NOME . ATR NUMERO
    (8) Decl -> INT NOME . ATR NOME

    INT             reduce using rule 6 (Decl -> INT NOME .)
    PRINT           reduce using rule 6 (Decl -> INT NOME .)
    NOME            reduce using rule 6 (Decl -> INT NOME .)
    ESCREVER        reduce using rule 6 (Decl -> INT NOME .)
    SE              reduce using rule 6 (Decl -> INT NOME .)
    ENQUANTO        reduce using rule 6 (Decl -> INT NOME .)
    $end            reduce using rule 6 (Decl -> INT NOME .)
    RETURN          reduce using rule 6 (Decl -> INT NOME .)
    ATR             shift and go to state 52


state 24

    (25) Atrib -> NOME ATR . Expr
    (26) Atrib -> NOME ATR . LER
    (28) Expr -> . ( Expr )
    (29) Expr -> . NOME ( )
    (30) Expr -> . Var
    (31) Expr -> . NUMERO
    (32) Expr -> . + ( Expr VIRG Expr )
    (33) Expr -> . - ( Expr VIRG Expr )
    (34) Expr -> . * ( Expr VIRG Expr )
    (35) Expr -> . / ( Expr VIRG Expr )
    (36) Expr -> . % ( Expr VIRG Expr )
    (37) Expr -> . Cond
    (48) Var -> . NOME
    (38) Cond -> . ( Cond )
    (39) Cond -> . MAIOR ( Expr VIRG Expr )
    (40) Cond -> . MENOR ( Expr VIRG Expr )
    (41) Cond -> . MAIORI ( Expr VIRG Expr )
    (42) Cond -> . MENORI ( Expr VIRG Expr )
    (43) Cond -> . IGUAL ( Expr VIRG Expr )
    (44) Cond -> . NIGUAL ( Expr VIRG Expr )
    (45) Cond -> . E ( Cond VIRG Cond )
    (46) Cond -> . OU ( Cond VIRG Cond )
    (47) Cond -> . NEG ( Cond )

    LER             shift and go to state 54
    (               shift and go to state 28
    NOME            shift and go to state 29
    NUMERO          shift and go to state 31
    +               shift and go to state 32
    -               shift and go to state 33
    *               shift and go to state 34
    /               shift and go to state 35
    %               shift and go to state 36
    MAIOR           shift and go to state 38
    MENOR           shift and go to state 39
    MAIORI          shift and go to state 40
    MENORI          shift and go to state 41
    IGUAL           shift and go to state 42
    NIGUAL          shift and go to state 43
    E               shift and go to state 44
    OU              shift and go to state 45
    NEG             shift and go to state 46

    Expr                           shift and go to state 53
    Var                            shift and go to state 30
    Cond                           shift and go to state 37

state 25

    (12) Fundecl -> NOME ( . ) (

    )               shift and go to state 55


state 26

    (9) Decl -> Fundecl DEFINE . NOME Programa RETURN NOME )
